--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fa-duotone fa-3x fa-solid fa-backward-step"></i>
-            <i class="fa-duotone fa-3x fa-solid fa-circle-play"></i>
+            <i class="fa-duotone fa-3x fa-solid fa-play-circle" id="masterPlay"></i>
             <i class="fa-duotone fa-3x fa-solid fa-forward-step"></i>
         </div>
         <div class="songInfo">
